# python-project-template

./: LICENSE  README.md  install_libs.sh  main.ipynb  pyproject.toml
scripts/: code_clone.sh  code_push.sh
tests/package/: test_helloworld.py
tests/project/: test_helloworld.py
